# learnCMake

./: .gitignore  CMakeLists.txt  learnCmake.kdev4  learncmake.cpp  learncmake.h  main.cpp  version.h.in
core/: Version.h
